--- a/data/config.json
+++ b/data/config.json
@@ -1,1 +1,34 @@
-
+{
+  "site": {
+    "name": "Synapleads",
+    "tagline": "Conecta leads con agentes reales en segundos",
+    "description": "La forma más rápida y confiable de escalar tu negocio de seguros",
+    "url": "https://synapleads.com",
+    "logo": "assets/images/logo.png",
+    "favicon": "assets/images/favicon.ico"
+  },
+  "colors": {
+    "primary": "#1C1C1E",
+    "secondary": "#00D1B2", 
+    "accent": "#FBBF24",
+    "white": "#FFFFFF",
+    "gray_light": "#F8F9FA",
+    "gray_dark": "#6C757D"
+  },
+  "contact": {
+    "phone": "+1-800-SYNAPSE",
+    "whatsapp": "+1-800-SYNAPSE",
+    "email": "admin@synapleads.com",
+    "address": "San Antonio, TX, USA"
+  },
+  "tracking": {
+    "ga4_id": "",
+    "meta_pixel_id": "",
+    "enable_tracking": true
+  },
+  "forms": {
+    "lead_endpoint": "",
+    "webhook_url": "",
+    "notification_email": "admin@synapleads.com"
+  }
+}
